--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <script defer src="main.e9a1e9539763a09aff26.js"></script><script defer src="main.088c6625d364f85567ae.js"></script><script defer src="main.1470c79e66108a15e0a7.js"></script><script defer src="main.932bad4269ca8acd36bb.js"></script><script defer src="main.e20f0a3911fe5fc2d9a0.js"></script></head>
+  <script defer src="main.e9a1e9539763a09aff26.js"></script><script defer src="main.088c6625d364f85567ae.js"></script><script defer src="main.1470c79e66108a15e0a7.js"></script><script defer src="main.932bad4269ca8acd36bb.js"></script><script defer src="main.e20f0a3911fe5fc2d9a0.js"></script><script defer src="main.790f0027220c4a86db0e.js"></script></head>
   <body>
     <main class="todoapp" id="root"></main>
   </body>
